Added textFieldShouldReturn so now textfield resigns when return is pressed on iPhone 6 hardware.  Dismissing InformationPostingViewController without remapping new submission.  Need to fix.

--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -107,21 +107,22 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Where are you studying today?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="viX-C2-1ca">
                                 <rect key="frame" x="220" y="103" width="161" height="103"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="161" id="x2Y-OQ-oSj"/>
+                                    <constraint firstAttribute="width" constant="161" id="SU8-Xi-r2S"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="4Pl-EA-fsf" userLabel="Address">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Pl-EA-fsf" userLabel="Address">
                                 <rect key="frame" x="50" y="285" width="499" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fv5-Ec-3r9">
                                 <rect key="frame" x="229" y="377" width="143" height="13"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="143" id="TOC-ME-oAw"/>
+                                    <constraint firstAttribute="width" constant="143" id="8B9-gz-Rl8"/>
+                                    <constraint firstAttribute="height" constant="13" id="Bkm-5f-1XG"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Find on the Map">
@@ -138,22 +139,26 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter a link to share here." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8N3-wi-qRr">
                                 <rect key="frame" x="187" y="68" width="227" height="41"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="41" id="F6r-FZ-eRr"/>
-                                    <constraint firstAttribute="width" constant="227" id="MUG-Ei-5Z7"/>
+                                    <constraint firstAttribute="width" constant="227" id="IHU-z8-3sk"/>
+                                    <constraint firstAttribute="height" constant="41" id="lpx-s9-lnL"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wDQ-8N-1yp" userLabel="Url">
-                                <rect key="frame" x="50" y="227" width="499" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <rect key="frame" x="50" y="215" width="499" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="m8P-86-YYa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NFH-AQ-5jh">
                                 <rect key="frame" x="259" y="418" width="82" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="82" id="kXA-gD-Vsx"/>
+                                    <constraint firstAttribute="height" constant="30" id="WBz-Fv-4Yh"/>
+                                    <constraint firstAttribute="width" constant="82" id="clZ-ZF-Wce"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Submit">
@@ -176,33 +181,31 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="4Pl-EA-fsf" firstAttribute="leading" secondItem="nP2-tM-Ghp" secondAttribute="leadingMargin" constant="34" id="5De-TA-br5"/>
-                            <constraint firstItem="dTt-Yh-Zyv" firstAttribute="top" secondItem="viX-C2-1ca" secondAttribute="bottom" constant="394" id="7T9-lI-AZO"/>
-                            <constraint firstItem="akB-tG-TtT" firstAttribute="trailing" secondItem="HAg-kj-7EP" secondAttribute="trailing" id="8d8-qE-Ggk"/>
-                            <constraint firstItem="8N3-wi-qRr" firstAttribute="top" secondItem="O9X-7T-HD6" secondAttribute="bottom" constant="48" id="GTW-GQ-7Il"/>
-                            <constraint firstItem="viX-C2-1ca" firstAttribute="top" secondItem="O9X-7T-HD6" secondAttribute="bottom" constant="83" id="LgQ-Lj-CO5"/>
-                            <constraint firstItem="HAg-kj-7EP" firstAttribute="bottom" secondItem="dTt-Yh-Zyv" secondAttribute="top" id="NEE-J6-Le5"/>
-                            <constraint firstItem="akB-tG-TtT" firstAttribute="bottom" secondItem="dTt-Yh-Zyv" secondAttribute="top" id="Q1J-JJ-c4k"/>
-                            <constraint firstItem="wDQ-8N-1yp" firstAttribute="leading" secondItem="4Pl-EA-fsf" secondAttribute="leading" id="Qfo-y1-dMi"/>
-                            <constraint firstItem="Fv5-Ec-3r9" firstAttribute="centerX" secondItem="viX-C2-1ca" secondAttribute="centerX" id="R0Z-Dz-Nbm"/>
-                            <constraint firstItem="dTt-Yh-Zyv" firstAttribute="top" secondItem="unY-vX-5RK" secondAttribute="bottom" constant="132" id="S7D-oV-kGe"/>
-                            <constraint firstAttribute="centerX" secondItem="unY-vX-5RK" secondAttribute="centerX" id="Tpj-k2-OKx"/>
-                            <constraint firstItem="Fv5-Ec-3r9" firstAttribute="top" secondItem="4Pl-EA-fsf" secondAttribute="bottom" constant="62" id="dPx-ZS-tKp"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="4Pl-EA-fsf" secondAttribute="trailing" constant="35" id="eUT-Kh-IPZ"/>
-                            <constraint firstItem="dTt-Yh-Zyv" firstAttribute="top" secondItem="Fv5-Ec-3r9" secondAttribute="bottom" constant="210" id="jXm-qN-zYs"/>
-                            <constraint firstItem="HAg-kj-7EP" firstAttribute="top" secondItem="wDQ-8N-1yp" secondAttribute="bottom" constant="8" symbolic="YES" id="lPL-v0-44P"/>
-                            <constraint firstItem="4Pl-EA-fsf" firstAttribute="centerY" secondItem="nP2-tM-Ghp" secondAttribute="centerY" id="m4G-7b-Z0v"/>
-                            <constraint firstItem="NFH-AQ-5jh" firstAttribute="top" secondItem="Fv5-Ec-3r9" secondAttribute="bottom" constant="28" id="mtJ-U6-Gpy"/>
-                            <constraint firstItem="dTt-Yh-Zyv" firstAttribute="top" secondItem="NFH-AQ-5jh" secondAttribute="bottom" constant="152" id="olg-On-Odf"/>
-                            <constraint firstItem="NFH-AQ-5jh" firstAttribute="centerX" secondItem="Fv5-Ec-3r9" secondAttribute="centerX" id="qtO-pe-2xt"/>
-                            <constraint firstItem="wDQ-8N-1yp" firstAttribute="trailing" secondItem="4Pl-EA-fsf" secondAttribute="trailing" id="spZ-ZF-Hm0"/>
-                            <constraint firstItem="akB-tG-TtT" firstAttribute="leading" secondItem="HAg-kj-7EP" secondAttribute="leading" id="t75-hl-PPD"/>
-                            <constraint firstItem="HAg-kj-7EP" firstAttribute="centerX" secondItem="Fv5-Ec-3r9" secondAttribute="centerX" id="twt-ow-oot"/>
-                            <constraint firstItem="HAg-kj-7EP" firstAttribute="leading" secondItem="nP2-tM-Ghp" secondAttribute="leading" id="vO1-GH-DDJ"/>
-                            <constraint firstItem="viX-C2-1ca" firstAttribute="centerX" secondItem="nP2-tM-Ghp" secondAttribute="centerX" id="vcz-fo-flB"/>
-                            <constraint firstItem="HAg-kj-7EP" firstAttribute="top" secondItem="viX-C2-1ca" secondAttribute="bottom" constant="59" id="vr6-Fa-nvs"/>
-                            <constraint firstItem="8N3-wi-qRr" firstAttribute="centerX" secondItem="viX-C2-1ca" secondAttribute="centerX" id="xMT-Qw-hmf"/>
-                            <constraint firstItem="unY-vX-5RK" firstAttribute="top" secondItem="Fv5-Ec-3r9" secondAttribute="bottom" constant="41" id="zSF-RE-Ry7"/>
+                            <constraint firstItem="8N3-wi-qRr" firstAttribute="top" secondItem="O9X-7T-HD6" secondAttribute="bottom" constant="48" id="0zp-kn-KFe"/>
+                            <constraint firstItem="Fv5-Ec-3r9" firstAttribute="centerX" secondItem="NFH-AQ-5jh" secondAttribute="centerX" id="1ZF-as-DMr"/>
+                            <constraint firstItem="HAg-kj-7EP" firstAttribute="leading" secondItem="nP2-tM-Ghp" secondAttribute="leading" id="2zf-zD-R3s"/>
+                            <constraint firstItem="Fv5-Ec-3r9" firstAttribute="centerX" secondItem="viX-C2-1ca" secondAttribute="centerX" id="3mW-UU-aiG"/>
+                            <constraint firstItem="4Pl-EA-fsf" firstAttribute="top" secondItem="wDQ-8N-1yp" secondAttribute="bottom" constant="40" id="87a-mc-jWn"/>
+                            <constraint firstItem="akB-tG-TtT" firstAttribute="leading" secondItem="HAg-kj-7EP" secondAttribute="leading" id="9d0-O0-g1s"/>
+                            <constraint firstItem="viX-C2-1ca" firstAttribute="top" secondItem="O9X-7T-HD6" secondAttribute="bottom" constant="83" id="CEE-lZ-ZHL"/>
+                            <constraint firstItem="NFH-AQ-5jh" firstAttribute="top" secondItem="Fv5-Ec-3r9" secondAttribute="bottom" constant="28" id="H3j-S5-hn6"/>
+                            <constraint firstItem="akB-tG-TtT" firstAttribute="bottom" secondItem="dTt-Yh-Zyv" secondAttribute="top" id="Ipe-Ri-vut"/>
+                            <constraint firstItem="Fv5-Ec-3r9" firstAttribute="top" secondItem="4Pl-EA-fsf" secondAttribute="bottom" constant="62" id="KB1-T9-7H4"/>
+                            <constraint firstItem="8N3-wi-qRr" firstAttribute="centerX" secondItem="viX-C2-1ca" secondAttribute="centerX" id="MT1-fG-reL"/>
+                            <constraint firstItem="akB-tG-TtT" firstAttribute="centerX" secondItem="NFH-AQ-5jh" secondAttribute="centerX" id="SNe-g4-77t"/>
+                            <constraint firstItem="HAg-kj-7EP" firstAttribute="top" secondItem="wDQ-8N-1yp" secondAttribute="bottom" constant="20" id="TQZ-oE-sxl"/>
+                            <constraint firstItem="akB-tG-TtT" firstAttribute="trailing" secondItem="HAg-kj-7EP" secondAttribute="trailing" id="Vsp-tm-RxI"/>
+                            <constraint firstItem="4Pl-EA-fsf" firstAttribute="centerY" secondItem="nP2-tM-Ghp" secondAttribute="centerY" id="X32-we-ic6"/>
+                            <constraint firstItem="4Pl-EA-fsf" firstAttribute="centerX" secondItem="unY-vX-5RK" secondAttribute="centerX" id="cvW-KO-dIU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wDQ-8N-1yp" secondAttribute="trailing" constant="35" id="ho4-of-Vj7"/>
+                            <constraint firstItem="wDQ-8N-1yp" firstAttribute="top" secondItem="viX-C2-1ca" secondAttribute="bottom" constant="9" id="k0P-is-YAd"/>
+                            <constraint firstItem="wDQ-8N-1yp" firstAttribute="leading" secondItem="nP2-tM-Ghp" secondAttribute="leadingMargin" constant="34" id="kAV-Xu-t3A"/>
+                            <constraint firstItem="HAg-kj-7EP" firstAttribute="bottom" secondItem="dTt-Yh-Zyv" secondAttribute="top" id="plF-tQ-ZsB"/>
+                            <constraint firstAttribute="trailing" secondItem="HAg-kj-7EP" secondAttribute="trailing" id="qOR-0k-vTt"/>
+                            <constraint firstItem="unY-vX-5RK" firstAttribute="top" secondItem="Fv5-Ec-3r9" secondAttribute="bottom" constant="41" id="qT0-u0-BOL"/>
+                            <constraint firstItem="4Pl-EA-fsf" firstAttribute="leading" secondItem="wDQ-8N-1yp" secondAttribute="leading" id="rjk-OY-Vjf"/>
+                            <constraint firstItem="akB-tG-TtT" firstAttribute="top" secondItem="unY-vX-5RK" secondAttribute="bottom" constant="88" id="vzD-NA-kzS"/>
+                            <constraint firstItem="wDQ-8N-1yp" firstAttribute="trailing" secondItem="4Pl-EA-fsf" secondAttribute="trailing" id="xt6-5X-hfw"/>
                         </constraints>
                     </view>
                     <connections>
