Removed TabBarController.swift and reverted name to MapTabBarController.  Class reference error now gone.

--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -337,7 +337,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="Sso-Je-ITy">
             <objects>
-                <tabBarController storyboardIdentifier="TabBarController" id="Ac0-7m-gI0" customClass="TabBarController" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="MapTabBarController" id="Ac0-7m-gI0" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="QWM-au-59E">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
